# bazel-demo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bar.py  helper.h  helpers.bzl  mylib.cc  mylib.h  src.py  test.cc  test.py  test.sh  testcase.py  use_toolchain_test.sh  user.cc  user.h  user_test.cc
.github/workflows/: bazel.yml  bazel_test.yaml
cc/: BUILD.bazel  test.cpp
cc-lib-deps/: .bazelrc  BUILD.bazel  MODULE.bazel  cc_toolchain  one.cc  one.h  three.cc  three.h  three_test.cc  two.cc  two.h  two_test.cc
echo/: BUILD.bazel
extension/: BUILD.bazel  echo.cpp  echo.h  foo.cpp  test.py
extfiles/src/: MODULE.bazel
extfiles/src/pkg1/: BUILD.bazel  test.sh
extfiles/src/ref1/: BUILD.bazel
extfiles/src/rules/: BUILD.bazel  import.bzl
foo/: BUILD.bazel
glob_vs_list/: BUILD.bazel  files.txt  test.sh
labels/helper/: helper.bzl
labels/pkg1/: BUILD.bazel  lib_test.py
labels/pkg2/: BUILD.bazel
libecho/: BUILD.bazel
mod_pytest/: .bazelrc  MODULE.bazel  requirements.in  requirements_lock.txt
mod_pytest/pkg1/pkg1/: BUILD.bazel  stuff.py
mod_pytest/pkg1/test/: BUILD.bazel  basic.py  basic_pytest.py
nonstandard_include/: BUILD.bazel  assert_hello.sh  hello.in  helper.bzl
nonstandard_include/implicit/: BUILD.bazel  defs.bzl
nonstandard_include/predeclared/: BUILD.bazel  defs.bzl
nonstandard_include/srcfile/: BUILD.bazel  defs.bzl  hello.inc
path/: path.bzl
pkg-opts/: .bazelrc  MODULE.bazel
py/: defs.bzl
py_test_env/: BUILD.bazel  helper.bzl  test_dlopen.py
repo_rule_import/: BUILD.bazel.external  MODULE.bazel
repo_rule_import/rules/: ext.bzl
repo_rule_import/test/: BUILD.bazel  archive.tar  test.py
rules/: BUILD.bazel  py.bzl
rules_py_reporule/: BUILD.bazel  README.md  test.py
rules_py_reporule/direct/baz/: BUILD.bazel  __init__.py
rules_py_reporule/imported/: BUILD.bazel
rules_py_reporule/imported/bar/: BUILD.bazel
rules_py_reporule/rules/: import.bzl
shared/: BUILD.bazel  assert_linking.py  check_symtab.py  macros.bzl  one.cpp  one.h  test1.cpp  test2.cpp  three.cpp  three.h  two.cpp  two.h
sharedlib/: BUILD.bazel  compiler_plugin.cpp
tool/: BUILD.bazel  defs.bzl  helper.bzl  tool_impl.cpp  wrapper.bzl  wrapper.sh.tmpl
toolchain/: BUILD.bazel
