load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "mylib",
    srcs = ["mylib.cc"],
    hdrs = ["mylib.h"],
    linkstatic = False,
)

cc_library(
    name = "helper",
    hdrs = ["helper.h"],
    linkstatic = False,
    deps = ["mylib"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    linkstatic = False,
    deps = ["helper"],
)

#------------------------------

cc_library(
    name = "user",
    srcs = ["user.cc"],
    hdrs = ["user.h"],
    linkstatic = False,
    deps = ["helper"],
)

cc_test(
    name = "user_test",
    srcs = ["user_test.cc"],
    linkstatic = False,
    deps = ["user"],
)
