module(name = "demo")

bazel_dep(name = "rules_python", version = "1.1.0", dev_dependency = True)

bazel_dep(name = "aspect_rules_py", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)
