load("//:helpers.bzl", "make_lib")
load("//py:defs.bzl", "bazel_py_library", "py_library")

package(default_visibility = ["//visibility:public"])

make_lib(
    name = "libecho_imported_so_file",
    src = "//extension:libecho_solib",
    out = "libecho.so",
)

cc_library(
    name = "libecho_cc_library_imported",
    srcs = ["libecho.so"],
)

cc_import(
    name = "libecho_cc_import",
    shared_library = "libecho.so",
)

py_library(
    name = "libecho_py_library_imported",
    data = ["libecho.so"],
    imports = ["."],
)
