load("//:helpers.bzl", "make_lib")

# Strips the RUNPATH and creates a local file "foo.so".
make_lib(
    name = "foo_imported_so_file",
    src = "//extension:foo_solib",
    out = "foo.so",
)

py_library(
    name = "foo",
    data = ["foo.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = ["//libecho"],
)
