load("//:helpers.bzl", "make_lib")

# Strips the RUNPATH and creates a local file "foo.so".
make_lib(
    name = "foo_imported_so_file",
    src = "//extension:foo_solib",
    out = "foo.so",
)

cc_library(
    name = "foo_so",
    srcs = ["foo.so"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "foo",
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "foo_so",
        "//libecho",
    ],
)
