load(":helper.bzl", "py_test_so_env_wrapper")

cc_library(
    name = "_one",
    srcs = [
        "one.cc",
        "one.h",
    ],
)

cc_shared_library(
    name = "one",
    deps = [":_one"],
)

py_test_so_env_wrapper(
    name = "test_dlopen",
    srcs = ["test_dlopen.py"],
    data = [":one"],
)
