load(":macros.bzl", "assert_linking_test")

cc_library(
    name = "three_lib",
    srcs = ["three.cpp"],
    hdrs = ["three.h"],
    linkstatic = False,
    deps = [
        ":one_lib",
        ":two_lib",
    ],
)

cc_shared_library(
    name = "three_so",
    dynamic_deps = [
        ":one_so",
        ":two_so",
    ],
    shared_lib_name = "libthree.so",
    deps = [":three_lib"],
)

assert_linking_test(
    name = "check_libthree_so",
    lib_root_name = "three",
    require = [
        "libone.so",
        "libtwo.so",
    ],
)

# Expected to pass
cc_test(
    name = "test1",
    srcs = ["test1.cpp"],
    dynamic_deps = [":three_so"],
    linkstatic = False,
    deps = [":three_lib"],
)

# Expected to fail linking
cc_test(
    name = "test2",
    srcs = ["test2.cpp"],
    dynamic_deps = [":three_so"],
    linkstatic = False,
    tags = ["manual"],
    deps = [":three_lib"],
)

# Supporting cc_library, cc_shared_library
cc_library(
    name = "one_lib",
    srcs = [
        "one.cpp",
    ],
    hdrs = [
        "one.h",
    ],
    linkstatic = False,
)

cc_shared_library(
    name = "one_so",
    shared_lib_name = "libone.so",
    deps = [":one_lib"],
)

cc_library(
    name = "two_lib",
    srcs = [
        "two.cpp",
    ],
    hdrs = [
        "two.h",
    ],
    linkstatic = False,
)

cc_shared_library(
    name = "two_so",
    shared_lib_name = "libtwo.so",
    deps = [":two_lib"],
)
