load("defs.bzl", "my_tool_toolchain")
load("wrapper.bzl", "tool_wrapper")

toolchain_type(name = "toolchain_type")

cc_binary(
    name = "tool_impl",
    srcs = ["tool_impl.cpp"],
)

tool_wrapper(
    name = "wrapped_tool",
    executable = "tool_impl",
    plugins = [
        "//sharedlib:compilerplugin",
    ],
)

my_tool_toolchain(
    name = "default_toolchain",
    compiler = "wrapped_tool",
)

toolchain(
    name = "default",
    toolchain = "default_toolchain",
    toolchain_type = "toolchain_type",
)
