genrule(
    name = "external_extract",
    srcs = ["archive.tar"],
    outs = [
        "external/py/foo/__init__.py",
        "external/py/bar/__init__.py",
    ],
    cmd = "tar -x -C $(RULEDIR) -f $< ",
    visibility = ["//visibility:public"],
)

py_library(
    name = "direct",
    srcs = [
        "external/py/bar/__init__.py",
        "external/py/foo/__init__.py",
    ],
    imports = ["external/py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "glob",
    srcs = glob([
        "external/py/foo/__init__.py",
        "external/py/bar/__init__.py",
    ]),
    imports = ["external/py"],
    visibility = ["//visibility:public"],
)

[py_test(
    name = "test_" + name,
    srcs = ["test.py"],
    main = "test.py",
    deps = [dep],
) for name, dep in [
    ("ext_glob", "@extfiles//:ext_py_glob"),
    ("ext_direct", "@extfiles//:ext_py_direct"),
    ("glob", "@extfiles//:ext_py_glob"),
    ("direct", "@extfiles//:ext_py_direct"),
]]
